--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,12 @@ mr-lint-docker-compose:
   script:
     - find . -name 'docker-compose.yml' | while read f ; do docker compose -f "$f" config -q ; done
 
+mr-lint-markdown:
+  extends: .mr-common
+  image: registry.zrnt.dev/oci/markdownlint-cli2:v1.0.2@sha256:876d4f030008dcc254e334b186adab9bf8dc2396f5b94e137c65a1e189cd891c
+  script:
+    - markdownlint-cli2 --config .gitlab/config.markdownlint.json *.md
+
 mr-lint-shellscript:
   extends: .mr-common
   image: registry.zrnt.dev/oci/shellcheck:v1.0.3
