--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,29 +9,24 @@ default:
 mr-fmt-prettier:
   extends: .mr-common
   image: registry.zrnt.dev/oci/prettier:v1.0.7@sha256:a6f214a9ec4e9be58fe8549aa7442adad8cf1d152913468ea9764522ca84b3c2
-  script:
-    - prettier --check .
+  script: prettier --check .
 
 mr-lint-docker-compose:
   extends: .mr-common
   image: docker.io/library/docker:27.2.1-cli@sha256:ce5ca0c57db0e5a43bf59a7cf62c2309b53f63dc86e18521798744054c000024
-  script:
-    - find . -name 'docker-compose.yml' | while read f ; do docker compose -f "$f" config -q ; done
+  script: find . -name 'docker-compose.yml' | while read f ; do docker compose -f "$f" config -q ; done
 
 mr-lint-markdown:
   extends: .mr-common
   image: registry.zrnt.dev/oci/markdownlint-cli2:v1.0.2@sha256:876d4f030008dcc254e334b186adab9bf8dc2396f5b94e137c65a1e189cd891c
-  script:
-    - markdownlint-cli2 --config .gitlab/config.markdownlint.json *.md
+  script: markdownlint-cli2 --config .gitlab/config.markdownlint.json *.md
 
 mr-lint-shellscript:
   extends: .mr-common
   image: registry.zrnt.dev/oci/shellcheck:v1.0.3
-  script:
-    - find . -name '*.sh' | while read f ; do shellcheck "$f" ; done
+  script: find . -name '*.sh' | while read f ; do shellcheck "$f" ; done
 
 mr-lint-yaml:
   extends: .mr-common
   image: registry.zrnt.dev/oci/yamllint:v1.0.8@sha256:a138f0779b0cba15fefb0f8c73dc69aa3ab454497adddacc9b04c822ba7120e8
-  script:
-    - yamllint -c .gitlab/yamllint.yml .
+  script: yamllint -c .gitlab/yamllint.yml .
