--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ default:
 mr-fmt-prettier:
   extends: .mr-common
   image: registry.zrnt.dev/oci/prettier:v1.0.7@sha256:a6f214a9ec4e9be58fe8549aa7442adad8cf1d152913468ea9764522ca84b3c2
-  script: prettier --check .
+  script: prettier --config .gitlab/prettier.json --check .
 
 mr-lint-docker-compose:
   extends: .mr-common
@@ -19,7 +19,7 @@ mr-lint-docker-compose:
 mr-lint-markdown:
   extends: .mr-common
   image: registry.zrnt.dev/oci/markdownlint-cli2:v1.0.2@sha256:876d4f030008dcc254e334b186adab9bf8dc2396f5b94e137c65a1e189cd891c
-  script: markdownlint-cli2 --config .gitlab/config.markdownlint.json *.md
+  script: markdownlint-cli2 *.md
 
 mr-lint-shellscript:
   extends: .mr-common
