--- a/.github/workflows/fmt-prettier.yml
+++ b/.github/workflows/fmt-prettier.yml
@@ -6,7 +6,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4.2.0
       - run: npx prettier --config .github/prettier.json --write .
-      - uses: stefanzweifel/git-auto-commit-action@v5
+      - uses: stefanzweifel/git-auto-commit-action@v5.0.1
+        with:
+          commit_message: "chore: format files"
 
 on:
   pull_request:
