--- a/.github/workflows/lint-compose.yml
+++ b/.github/workflows/lint-compose.yml
@@ -12,4 +12,5 @@ name: lint-compose
     branches:
       - main
     paths:
+      - .github/workflows/lint-compose.yml
       - "**/docker-compose.yml"
