--- a/.github/workflows/lint-dockerfile.yml
+++ b/.github/workflows/lint-dockerfile.yml
@@ -5,7 +5,6 @@ jobs:
       - uses: actions/checkout@v4.2.0
       - uses: docker://docker.io/pipelinecomponents/hadolint:0.26.4
         with:
-          entrypoint: sh
           args: -c 'find . -name 'Dockerfile' | while read f ; do hadolint "$f" ; done'
 
 name: lint-dockerfile
@@ -15,4 +14,5 @@ name: lint-dockerfile
     branches:
       - main
     paths:
+      - .github/workflows/lint-dockerfile.yml
       - "**/Dockerfile"
