--- a/.github/workflows/lint-sh.yml
+++ b/.github/workflows/lint-sh.yml
@@ -5,7 +5,6 @@ jobs:
       - uses: actions/checkout@v4.2.0
       - uses: docker://docker.io/pipelinecomponents/shellcheck:0.12.12
         with:
-          entrypoint: sh
           args: -c 'find . -name '*.sh' | while read f ; do shellcheck "$f" ; done'
 
 name: lint-sh
@@ -15,4 +14,5 @@ name: lint-sh
     branches:
       - main
     paths:
+      - .github/workflows/lint-sh.yml
       - "**.sh"
