ci: fix string quotes

--- a/.github/workflows/lint-dockerfile.yml
+++ b/.github/workflows/lint-dockerfile.yml
@@ -5,7 +5,7 @@ jobs:
       - uses: actions/checkout@v4.2.0
       - uses: docker://docker.io/pipelinecomponents/hadolint:0.26.4
         with:
-          args: -c 'find . -name 'Dockerfile' | while read f ; do hadolint "$f" ; done'
+          args: -c 'find . -name "Dockerfile" | while read f ; do hadolint "$f" ; done'
           entrypoint: sh
 
 name: lint-dockerfile
