--- a/.github/workflows/lint-compose.yml
+++ b/.github/workflows/lint-compose.yml
@@ -1,5 +1,3 @@
-name: lint-compose
-
 jobs:
   lint-compose:
     runs-on: ubuntu-latest
@@ -7,9 +5,12 @@ jobs:
       - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
       - run: find . -name 'docker-compose.yml' | while read f ; do docker compose -f "$f" config -q ; done
 
-on:
+name: lint-compose
+
+"on":
   pull_request:
     branches:
       - main
     paths:
+      - .github/workflows/lint-compose.yml
       - "**/docker-compose.yml"
