--- a/.github/workflows/lint-dockerfile.yml
+++ b/.github/workflows/lint-dockerfile.yml
@@ -1,5 +1,3 @@
-name: lint-dockerfile
-
 jobs:
   lint-dockerfile:
     runs-on: ubuntu-latest
@@ -7,12 +5,17 @@ jobs:
       - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
       - uses: docker://docker.io/pipelinecomponents/hadolint:0.26.4
         with:
+          args:
+            - -c
+            - find . -name "Dockerfile" | while read f ; do hadolint "$f" ; done
           entrypoint: sh
-          args: -c 'find . -name 'Dockerfile' | while read f ; do hadolint "$f" ; done'
 
-on:
+name: lint-dockerfile
+
+"on":
   pull_request:
     branches:
       - main
     paths:
+      - .github/workflows/lint-dockerfile.yml
       - "**/Dockerfile"
