--- a/.github/workflows/lint-markdown.yml
+++ b/.github/workflows/lint-markdown.yml
@@ -1,5 +1,3 @@
-name: lint-markdown
-
 jobs:
   lint-markdown:
     runs-on: ubuntu-latest
@@ -9,9 +7,12 @@ jobs:
         with:
           globs: "**.md"
 
-on:
+name: lint-markdown
+
+"on":
   pull_request:
     branches:
       - main
     paths:
+      - .github/workflows/lint-markdown.yml
       - "**.md"
