--- a/.github/workflows/lint-sh.yml
+++ b/.github/workflows/lint-sh.yml
@@ -1,5 +1,3 @@
-name: lint-sh
-
 jobs:
   lint-sh:
     runs-on: ubuntu-latest
@@ -7,12 +5,17 @@ jobs:
       - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
       - uses: docker://docker.io/pipelinecomponents/shellcheck:0.12.12
         with:
+          args:
+            - -c
+            - find . -name '*.sh' | while read f ; do shellcheck "$f" ; done
           entrypoint: sh
-          args: -c 'find . -name '*.sh' | while read f ; do shellcheck "$f" ; done'
 
-on:
+name: lint-sh
+
+"on":
   pull_request:
     branches:
       - main
     paths:
+      - .github/workflows/lint-sh.yml
       - "**.sh"
