--- a/.github/workflows/lint-yaml.yml
+++ b/.github/workflows/lint-yaml.yml
@@ -1,15 +1,16 @@
-name: lint-yaml
-
 jobs:
   lint-yaml:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
-      - run: yamllint -c .gitlab/yamllint.yml .
+      - run: yamllint -c .github/yamllint.yml .
 
-on:
+name: lint-yaml
+
+"on":
   pull_request:
     branches:
       - main
     paths:
+      - .github/workflows/lint-yaml.yml
       - "**.yml"
