--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "configMigration": true,
   "dependencyDashboard": true,
-  "extends": ["config:best-practices"],
+  "extends": ["config:best-practices", "customManagers:dockerfileVersions"],
   "osvVulnerabilityAlerts": true,
   "packageRules": [
     {
