--- a/.github/workflows/lint-sh.yml
+++ b/.github/workflows/lint-sh.yml
@@ -5,9 +5,7 @@ jobs:
       - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
       - uses: docker://docker.io/pipelinecomponents/shellcheck:0.12.12
         with:
-          args:
-            - -c
-            - find . -name '*.sh' | while read f ; do shellcheck "$f" ; done
+          args: -c "find . -name '*.sh' | while read f ; do shellcheck \"$f\" ; done"
           entrypoint: sh
 
 name: lint-sh
