--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,5 +18,6 @@
       "automerge": true
     }
   ],
-  "semanticCommits": "enabled"
+  "semanticCommits": "enabled",
+  "assignees": ["dvdzara"]
 }
