--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,12 +8,12 @@
       "extensions": [
         "DavidAnson.vscode-markdownlint",
         "esbenp.prettier-vscode",
-        "github.vscode-github-actions",
         "redhat.vscode-yaml"
       ]
     }
   },
   "features": {
-    "ghcr.io/devcontainers/features/common-utils": {}
+    "ghcr.io/devcontainers/features/common-utils": {},
+    "ghcr.io/devcontainers/features/git": {}
   }
 }
