--- a/.woodpecker/check-prettier.yml
+++ b/.woodpecker/check-prettier.yml
@@ -2,13 +2,12 @@
 
 steps:
   - commands:
-      - npm install -g jsonlint
-      - |
-        git ls-tree --name-only -r HEAD | grep -E "^(.+\/)?.*[^\/\s]\.json$" | while read f ; do
-          echo "checking: $f" && jsonlint -q "$f"
-        done
+      - npx "prettier@PRETTIER_VERSION" --check .
+    environment:
+      # renovate: datasource=npm depName=prettier versioning=npm
+      PRETTIER_VERSION: 3.3.3
     image: docker.io/library/node:22.9.0-bookworm@sha256:69e667a79aa41ec0db50bc452a60e705ca16f35285eaf037ebe627a65a5cdf52
-    name: check-jsonlint
+    name: check-prettier
 
 when:
   - event: pull_request
