--- a/.woodpecker/check-yamllint.yml
+++ b/.woodpecker/check-yamllint.yml
@@ -2,12 +2,12 @@
 
 steps:
   - commands:
-      - apk add yamllint
-      - |
-        git ls-tree --name-only -r HEAD | grep -E "^(.+\/)?.*[^\/\s]\.ya?ml$" | while read f ; do
-          echo "checking: $f" && yamllint "$f"
-        done
-    image: docker.io/library/alpine:3.20.3@sha256:beefdbd8a1da6d2915566fde36db9db0b524eb737fc57cd1367effd16dc0d06d
+      - pip install --root-user-action=ignore "yamllint==$YAMLLINT_VERSION"
+      - yamllint .
+    environment:
+      # renovate: datasource=pypi depName=yamllint versioning=pep440
+      YAMLLINT_VERSION: 1.35.1
+    image: docker.io/library/python:3.13.0-alpine@sha256:81362dd1ee15848b118895328e56041149e1521310f238ed5b2cdefe674e6dbf
     name: check-yamllint
 
 when:
