--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -1,6 +1,6 @@
+# yaml-language-server: $schema=https://json.schemastore.org/yamllint.json
+
 extends: default
-ignore:
-  - pnpm-lock.yaml
 rules:
   braces:
     forbid: non-empty
