--- a/.woodpecker/check-prettier.yml
+++ b/.woodpecker/check-prettier.yml
@@ -2,7 +2,7 @@
 
 steps:
   - commands:
-      - npx "prettier@PRETTIER_VERSION" --check .
+      - npx "prettier@$PRETTIER_VERSION" --check .
     environment:
       # renovate: datasource=npm depName=prettier versioning=npm
       PRETTIER_VERSION: 3.3.3
