ci: fix shelccheck

--- a/.woodpecker/check-shellcheck.yml
+++ b/.woodpecker/check-shellcheck.yml
@@ -1,5 +1,9 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/woodpecker-ci/woodpecker/main/pipeline/frontend/yaml/linter/schema/schema.json
 
+labels:
+  # Required by shellcheck image.
+  platform: linux/amd64
+
 steps:
   - commands:
       - apk add git
@@ -7,7 +11,7 @@ steps:
         git ls-tree --name-only -r HEAD | grep -E "^(.+\/)?.*[^\/\s]\.sh$" | while read f ; do
           echo "checking $f" && shellcheck "$f"
         done
-    image: docker.io/pipelinecomponents/shellcheck:v0.12.12
+    image: docker.io/pipelinecomponents/shellcheck:0.12.12
     name: check-shellcheck
 
 when:
