--- a/.woodpecker/check-kics.yml
+++ b/.woodpecker/check-kics.yml
@@ -2,7 +2,7 @@
 
 steps:
   - commands:
-      - kics scan --path .
+      - kics scan --no-progress --exclude-queries=8c978947-0ff6-485c-b0c2-0bfca6026466 --path=.
     image: docker.io/checkmarx/kics:v2.1.3-debian@sha256:7a7c9f49b1ec45556384d480e8cec799ab6476876cecc7337bf7205c31b2eff7
     name: check-kics
 
