--- a/.woodpecker/check-shellcheck.yml
+++ b/.woodpecker/check-shellcheck.yml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/woodpecker-ci/woodpecker/main/pipeline/frontend/yaml/linter/schema/schema.json
 
 labels:
-  # Required by shellcheck image.
+  # shellcheck image is built only for this platform.
   platform: linux/amd64
 
 steps:
